--- a/index.ipynb
+++ b/index.ipynb
@@ -187,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'madagascar'"
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
