--- a/index.ipynb
+++ b/index.ipynb
@@ -149,13 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    \n",
+    "    travel_destinations.append(\"madagascar\")\n",
     "    return \"madagascar\""
    ]
   },
