--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "def capitalize_countries():\n",
     "    for country in travel_destinations:\n",
     "        travel_destinations.title()\n",
-    "    "
+    "    return "
    ]
   },
   {
