Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for country in travel_destinations:\n",
-    "        pi"
+    "        print(country)"
    ]
   },
   {
