--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,9 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for country in travel_destinations:\n",
-    "        print(country)"
+    "        print(country)\n",
+    "\n",
+    "        "
    ]
   },
   {
