--- a/index.ipynb
+++ b/index.ipynb
@@ -217,16 +217,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "argentina\n",
+      "mexico\n",
+      "italy\n",
+      "finland\n",
+      "canada\n",
+      "croatia\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for country in travel_destinations:\n",
     "        print(country)\n",
     "\n",
-    "        "
+    "capitalize_countries()"
    ]
   },
   {
