Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,19 +217,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "argentina\n",
-      "mexico\n",
-      "italy\n",
-      "finland\n",
-      "canada\n",
-      "croatia\n"
+      "Argentina\n",
+      "Mexico\n",
+      "Italy\n",
+      "Finland\n",
+      "Canada\n",
+      "Croatia\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for country in travel_destinations:\n",
-    "        country.title()\n",
+    "        country=country.title()\n",
     "        print(country)\n",
     "        \n",
     "\n",
