--- a/index.ipynb
+++ b/index.ipynb
@@ -236,6 +236,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    cap\n",
     "    for country in travel_destinations:\n",
     "        country=country.title()\n",
     "        \n",
