Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,6 +239,7 @@
     "    cap_list=[]\n",
     "    for country in travel_destinations:\n",
     "        country=country.title()\n",
+    "        cap_list.append(c)\n",
     "        \n",
     "        \n",
     "\n",
