Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,9 +238,8 @@
     "def capitalize_countries():\n",
     "    cap_list=[]\n",
     "    for country in travel_destinations:\n",
-    "        country=country.title()\n",
-    "        cap_list.append(c)\n",
-    "        \n",
+    "        cap_list.append(country.title())\n",
+    "    ret\n",
     "        \n",
     "\n",
     "capitalize_countries()"
