Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,20 +217,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Argentina\n",
-      "Mexico\n",
-      "Italy\n",
-      "Finland\n",
-      "Canada\n",
-      "Croatia\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -239,9 +237,8 @@
     "    cap_list=[]\n",
     "    for country in travel_destinations:\n",
     "        cap_list.append(country.title())\n",
-    "    ret\n",
+    "    return(cap_list)\n",
     "        \n",
-    "\n",
     "capitalize_countries()"
    ]
   },
