--- a/index.ipynb
+++ b/index.ipynb
@@ -244,20 +244,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "argentina\n",
-      "mexico\n",
-      "italy\n",
-      "finland\n",
-      "canada\n",
-      "croatia\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
